# smolvla-edge-nx

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.jetson.yml  docker-compose.yml  pyproject.toml  requirements.txt
benchmarks/: README.md  collate.py  plot_async_queue.py
benchmarks/results/: nx_async_g05.json  nx_sync_g0.json  onnx_parity.json  summary.csv
benchmarks/results/ros2/: allros2_nx_10ep.json  allros2_nx_10ep_events.jsonl  python_oracle_50ep.json  stage1_50ep.json  stage1_50ep_events.jsonl  stage1_gate.json  stage1_gate_events.jsonl  stage1_gate_fs3.json  stage1_gate_fs3_events.jsonl  stage2_cpp_50ep.json  stage2_cpp_50ep_events.jsonl  stage2_fp16graph_50ep.json  stage2_fp16graph_50ep_events.jsonl  timing_breakdown.json
configs/: train.aloha_sim.yaml  train.so101_pickplace.yaml
deploy/: README.md
deploy/client_server/: client.py  gen_proto.sh  profile_tick.py  server.py  sim_env_check.py  sim_server.py  warm_remote.py
deploy/client_server/proto/: policy.proto
deploy/cpp_server/: CMakeLists.txt
deploy/cpp_server/src/: server.cpp
deploy/jetson-native-torch/: README.md  bench_256m.py  bench_cudagraph_256m.py  bench_cudagraph_manual.py  bench_cudagraphs.py  bench_depth.py  copy_experiment.py  kernel_count.py  parity_check.py  profile_infer.py  smoke_fp16_graph.py  stage_breakdown.py  verify_report.py
deploy/ondevice/: conversion_notes.md
deploy/onnx/: bench_ort.py  export_smolvla.py  onnx_patches.py  parity.py  patch_for_ort115.py
deploy/ros2/: policy_node.py
deploy/ros2/src/smolvla_client/: CMakeLists.txt  package.xml
deploy/ros2/src/smolvla_client/include/smolvla_client/: algorithm.hpp
deploy/ros2/src/smolvla_client/src/: async_client.cpp
deploy/ros2/src/smolvla_client/test/: aggregate_fixtures.txt  gen_fixtures.py  test_aggregate.cpp
deploy/ros2/src/smolvla_msgs/: CMakeLists.txt  package.xml
deploy/ros2/src/smolvla_msgs/msg/: PolicyChunk.msg  PolicyRequest.msg  SimObservation.msg  TickEvent.msg
docker/: Dockerfile  cpp_server.Dockerfile  jetson_infer.Dockerfile  jetson_ros2_humble.Dockerfile  ros2.Dockerfile  ros2_entrypoint.sh
docs/: future-work-rover.md  roadmap.md  setup-jetson.md
notebooks/: 01_transformer_from_scratch.ipynb  02_smolvla_action_expert.ipynb  colab_train_smolvla_aloha.ipynb
openspec/changes/ros2-cpp-async-deployment/: design.md  proposal.md  tasks.md
openspec/changes/rover-vla-sim-first/: design.md  proposal.md  tasks.md
openspec/changes/smolvla-edge-deployment/: design.md  proposal.md  tasks.md
rover/: .gitignore  README.md  train_colab.ipynb  train_smoke.sh
rover/datagen/: batch_datagen.sh  instructions.py  patch_vision_topk.py  regen_seeds.sh  relabel.py  run_v4_pipeline.sh  test_relabel.py  to_lerobot.py  v4_corridor_backfill_pool.txt  v4_extend_list.txt  v4_impossible_seeds.txt  v4_regen_list.txt  verify_dataset.py
rover/datagen/patches/: README.md  v5_wide_bearing.patch
rover/eval/: clip_prop_probe.py  omnivla_probe.py  omnivla_swap.py
rover/eval_results/: compare_grid_gif.py  detector_range_recall.py  grid_to_row.py  grounding_diagnosis.md  grounding_probe.py  run_eval_v4.sh  scene_overview_gif.py  side_by_side_gif.py  test_acquisition_offline.py  test_goal_acquisition.py  test_goal_memory.py  test_goal_projection.py
rover/eval_traces/open_ground_seed09000_t0/: episode.json  gt_pose.jsonl  scene_config.json
rover/eval_traces/open_ground_seed09001_t0/: episode.json  gt_pose.jsonl
rover/eval_traces/open_ground_seed09002_t0/: episode.json  gt_pose.jsonl
rover/eval_traces/open_ground_seed09003_t0/: episode.json  gt_pose.jsonl
rover/eval_traces/open_ground_seed09004_t0/: episode.json  gt_pose.jsonl
rover/eval_traces/open_ground_seed09005_t0/: episode.json  gt_pose.jsonl
rover/eval_traces/open_ground_seed09006_t0/: episode.json  gt_pose.jsonl
rover/eval_traces/open_ground_seed09007_t0/: episode.json  gt_pose.jsonl
rover/eval_traces/open_ground_seed09008_t0/: episode.json  gt_pose.jsonl
rover/eval_traces/open_ground_seed09009_t0/: episode.json  gt_pose.jsonl
rover/eval_traces_expert/open_ground_seed09000/: cmd.jsonl  episode.json  frames.jsonl  gt_pose.jsonl  state.jsonl
rover/eval_traces_expert/open_ground_seed09001/: cmd.jsonl  episode.json  frames.jsonl  gt_pose.jsonl  scene_config.json  state.jsonl
rover/eval_traces_expert/open_ground_seed09002/: cmd.jsonl  episode.json  frames.jsonl  gt_pose.jsonl  state.jsonl
rover/eval_traces_expert/open_ground_seed09003/: cmd.jsonl  episode.json  frames.jsonl  gt_pose.jsonl  state.jsonl
rover/eval_traces_expert/open_ground_seed09004/: cmd.jsonl  episode.json  frames.jsonl  gt_pose.jsonl  state.jsonl
rover/eval_traces_expert/open_ground_seed09005/: cmd.jsonl  episode.json  frames.jsonl  gt_pose.jsonl  state.jsonl
rover/eval_traces_expert/open_ground_seed09006/: camera_info.json  cmd.jsonl  episode.json  frames.jsonl  gt_pose.jsonl  state.jsonl
rover/eval_traces_expert/open_ground_seed09007/: cmd.jsonl  episode.json  frames.jsonl  gt_pose.jsonl  scene_config.json  state.jsonl
rover/eval_traces_expert/open_ground_seed09008/: cmd.jsonl  episode.json  frames.jsonl  gt_pose.jsonl  state.jsonl
rover/eval_traces_expert/open_ground_seed09009/: cmd.jsonl  episode.json  frames.jsonl  (+2 more)
rover/ros2/src/rover_runtime/: CMakeLists.txt  package.xml
rover/ros2/src/rover_runtime/scripts/: chunk_client_node.py  goal_acquisition_node.py  goal_memory_node.py  goal_projection.py  tracker_node.py
rover/ros2/src/rover_sim/: CMakeLists.txt  package.xml
rover/ros2/src/rover_sim/config/: controllers.yaml
rover/ros2/src/rover_sim/launch/: sim_bringup.launch.py
rover/ros2/src/rover_sim/scripts/: scene_manager.py  state_publisher.py
rover/ros2/src/rover_sim/urdf/: rover_vla.urdf.xacro
rover/ros2/src/rover_sim/worlds/: corridor.sdf  open_ground.sdf  parking_lot.sdf  props_ground.sdf
rover/runtime/: omnivla_server.py  policy_server.py
scripts/: deploy_pipeline.sh  make_demo_gif.py  setup_sim.sh  train.sh
src/smolvla_edge/: __init__.py  async_infer.py  bench.py  common.py  cuda_graph.py  eval.py  infer.py  remote.py
(+123 files in other folders)
