[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smolvla-edge"
version = "0.1.0"
description = "Fine-tune SmolVLA and deploy/benchmark it on a Jetson Xavier NX (8 GB)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "archerwang" }]
keywords = ["VLA", "SmolVLA", "LeRobot", "edge", "Jetson", "robotics"]

# Runtime deps are pinned in requirements.txt (lerobot[smolvla]==0.5.0 etc.).
# This file exists mainly to make `pip install -e .` expose the smolvla_edge package.
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
