<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smolvla_client</name>
  <version>0.1.0</version>
  <description>C++ async inference client — SmolVLA §3.3 Algorithm 1, port of async_infer.AsyncRunner (openspec: ros2-cpp-async-deployment, design D4).</description>
  <maintainer email="aidenwang752@gmail.com">Tao Wang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>smolvla_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
