<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_runtime</name>
  <version>0.1.0</version>
  <description>
    Three-loop runtime for the rover VLA (design D3): 50 Hz Pure Pursuit
    tracker consuming body-frame waypoint chunks with latency compensation
    and a staleness watchdog, plus the async policy-loop client that feeds
    it from the policy server (rover/runtime/policy_server.py).
  </description>
  <maintainer email="aidenwang752@gmail.com">taowang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
